--- a/projeto.html
+++ b/projeto.html
@@ -517,41 +517,35 @@
     
     <!-- Footer -->
     <footer class="footer">
+      <d <!-- Footer -->
+    <footer class="footer">
       <div class="container">
-        <div class="footer-grid grid grid-md-4 gap-4">
+        <div class="footer-grid">
           <div class="footer-column">
             <h3>Vida Verde</h3>
             <p>Preservando o patrimônio natural de Minas Gerais desde 2005.</p>
           </div>
+          <div class="footer-column">
             <h3>Links Rápidos</h3>
             <ul class="footer-links">
               <li><a href="index.html">Página Inicial</a></li>
               <li><a href="projeto.html">Projetos Sociais</a></li>
               <li><a href="cadastro.html">Cadastro</a></li>
-              <li><a href="index.html#contato">Contato</a></li>
+              <li><a href="#contato">Contato</a></li>
             </ul>
           </div>
 
           <div class="footer-column">
             <h3>Projetos</h3>
             <ul class="footer-links">
-              <li><a href="#nascentes">Nascentes Vivas</a></li>
-              <li><a href="#cerrado">Cerrado em Pé</a></li>
-              <li><a href="#mata-atlantica">Mata Atlântica</a></li>
+              <li><a href="projeto.html#nascentes">Nascentes Vivas</a></li>
+              <li><a href="projeto.html#cerrado">Cerrado em Pé</a></li>
+              <li><a href="projeto.html#mata-atlantica">Mata Atlântica</a></li>
             </ul>
           </div>
+          
 
-          <div class="footer-column">
-            <h3>Transparência</h3>
-            <ul class="footer-links">
-              <li><a href="#">Relatórios Anuais</a></li>
-              <li><a href="#">Prestação de Contas</a></li>
-              <li><a href="#">Certificações</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="footer-bottom text-center">
+        <div class="footer-bottom">
           <p>&copy; 2024 Vida Verde - Todos os direitos reservados</p>
           <p>Desenvolvido por Fábio Lopes de Andrade</p>
         </div>
@@ -559,7 +553,11 @@
     </footer>
 
     <script src="js/script.js"></script>
-    <script>
+  </body>
+</html>
+"<!-- Teste deploy -->" 
+"<!-- Teste deploy -->" 
+
       // Funções específicas para a página de projetos
       function copiarPix() {
         const pixKey = "doe@vidaverde.org.br";
