--- a/cadastro.html
+++ b/cadastro.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <!-- Header -->
+    <img src="assets/imagens/original/02.png" alt="Mão branca com palma e dedos abertos colocada sobre seis folhas verdes dispostas em forma de flor e um caule marrom ao centro, dentro de um aro circular verde; fundo branco; transmite cuidado, crescimento e proteção ambiental" width="100%">
     <header class="header">
         <div class="container">
             <div class="header-content">
