--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <!-- Header -->
     <header class="header">
+        <img src="assets/imagens/original/02.png" alt="Mão de cor branca sobre folhas de cor verde" width="100%">
       <div class="container">
         <div class="header-content">
           <a href="index.html" class="logo">
