--- a/cadastro.html
+++ b/cadastro.html
@@ -12,9 +12,8 @@
 </head>
 <body>
     <!-- Header -->
-    <img src="assets/imagens/original/02.png" alt="Mão branca com palma e dedos abertos colocada sobre seis folhas verdes dispostas em forma de flor e um caule marrom ao centro, dentro de um aro circular verde; fundo branco; transmite cuidado, crescimento e proteção ambiental" width="100%">
     <header class="header">
-        <div class="container">
+    <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
                     <i class="fas fa-seedling logo-icon"></i>
@@ -183,6 +182,20 @@
 
                                 <button type="submit" class="btn btn-primary btn-lg w-100">
                                     <i class="fas fa-paper-plane"></i>
+
+                                     <div class="card mb-5">
+            <div class="card-body">
+              <img
+                src="assets/imagens/optimized/01 otm.jpg"
+                alt="Grupo de pessoas com camisas brancas, em posição circular, colocam as mãos se tocando no centro do círculo"
+                style="
+                  width: 100%;
+                  height: 400px;
+                  object-fit: cover;
+                  border-radius: var(--border-radius);
+                  margin-bottom: var(--space-4);
+                "
+              />
                                     Enviar Cadastro
                                 </button>
                             </form>
@@ -225,7 +238,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <img src="assets/imagens/31977255_2203.i402.003.S.m004.c13.Donation and volunteer work flat composition.jpg" 
+                            <img src="assets/imagens/optimized/03 otm.jpg" 
                                  alt="Doação e trabalho voluntário" 
                                  style="width: 100%; height: 300px; object-fit: cover; border-radius: var(--border-radius); margin-top: var(--space-4);">
                         </div>
