--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <body>
     <!-- Header -->
     <header class="header">
-        <img src="assets/imagens/original/02.png" alt="Mão de cor branca sobre folhas de cor verde" width="100%">
       <div class="container">
         <div class="header-content">
           <a href="index.html" class="logo">
@@ -215,6 +214,19 @@
             </div>
           </div>
         </section>
+
+         <div class="card mb-5">
+            <div class="card-body">
+              <img
+                src="assets/imagens/optimized/01 otm.jpg"
+                alt="Grupo de pessoas com camisas brancas, em posição circular, colocam as mãos se tocando no centro do círculo"
+                style="
+                  width: 100%;
+                  height: 400px;
+                  object-fit: cover;
+                  border-radius: var(--border-radius);
+                  margin-bottom: var(--space-4);
+                "
 
         <!-- Transparência -->
         <section class="section">
