--- a/projeto.html
+++ b/projeto.html
@@ -15,8 +15,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="header">
-      <img src="assets/imagens/original/02.png" alt="Mão branca com palma e dedos abertos colocada sobre seis folhas verdes dispostas em forma de flor e um caule marrom ao centro, dentro de um aro circular verde; fundo branco; transmite cuidado, crescimento e proteção ambiental" width="100%">
+      <header class="header">
       <div class="container">
         <div class="header-content">
           <a href="index.html" class="logo">
@@ -100,7 +99,7 @@
           <div class="card mb-5">
             <div class="card-body">
               <img
-                src="assets/imagens/feche-o-trabalho-em-equipe-voluntario-de-pessoas-colocando-o-dedo-nas-maos-em-forma-de-estrela-juntospilha-de-maosunidade-e-trabalho-em-equipe-no-dia-mundial-meio-ambiente.jpg"
+                src="assets/imagens/optimized/01 otm.jpg"
                 alt="Grupo de pessoas com camisas brancas, em posição circular, colocam as mãos se tocando no centro do círculo"
                 style="
                   width: 100%;
