--- a/cadastro.html
+++ b/cadastro.html
@@ -184,24 +184,15 @@
                                     <i class="fas fa-paper-plane"></i>
 
                                      <div class="card mb-5">
-            <div class="card-body">
-              <img
-                src="assets/imagens/optimized/01 otm.jpg"
-                alt="Grupo de pessoas com camisas brancas, em posição circular, colocam as mãos se tocando no centro do círculo"
-                style="
-                  width: 100%;
-                  height: 400px;
-                  object-fit: cover;
-                  border-radius: var(--border-radius);
-                  margin-bottom: var(--space-4);
-                "
-              />
+                                        <div class="card-body">
+                                            <h3>Junte-se a Nós!</h3>
+                                            <p>Ao se tornar um voluntário da Vida Verde, você estará contribuindo diretamente para a preservação do meio ambiente em Minas Gerais. Sua dedicação e paixão farão a diferença em nossas iniciativas de conservação, educação ambiental e apoio às comunidades locais.</p>
+                                            <p>Preencha o formulário ao lado com suas informações e áreas de interesse. Nossa equipe entrará em contato para discutir como você pode se envolver em nossos projetos.</p>
+                                            <p>Obrigado por considerar fazer parte da nossa missão de proteger e restaurar a natureza!</p>
+                                        </div>
+                                    </div>
                                     Enviar Cadastro
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-
+                                                                    </button>
                     <div class="card">
                         <div class="card-body">
                             <h3>Por que ser um voluntário?</h3>
