--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   <body>
     <!-- Header -->
     <header class="header">
+      <!-- Imagem do Cabeçalho -->
+<div class="header-image">
+  <img 
+    src="assets/imagens/optimized/02_otm.png"
+    alt="uma mão humana, de cor branca, desenhada repousando sobre sete folhas, tudo contido em um círculo de bordas verdes. Ao lado, texto em verde onde se lê Vida Verde" 
+    class="header-img"
+  />
+  
+</div>
       <div class="container">
         <div class="header-content">
           <a href="index.html" class="logo">
