--- a/projeto.html
+++ b/projeto.html
@@ -16,6 +16,15 @@
   <body>
     <!-- Header -->
       <header class="header">
+      <!-- Header -->
+    <header class="header">
+      <!-- Imagem do Cabeçalho -->
+<div class="header-image">
+  <img 
+    src="assets/imagens/original/02.png"
+    alt="uma mão humana, de cor branca, desenhada repousando sobre sete folhas, tudo contido em um círculo de bordas verdes. Ao lado, texto em verde onde se lê Vida Verde" 
+    class="header-img"
+  />  
       <div class="container">
         <div class="header-content">
           <a href="index.html" class="logo">
