--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
     <link rel="stylesheet" href="assets/css/layout.css" />
     <link rel="stylesheet" href="assets/css/components.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+<</head>
+<body>
 <!-- Header -->
     <header class="header">    
     <!-- Imagem do Cabeçalho -->
@@ -23,6 +20,7 @@
     alt="uma mão humana, de cor branca, desenhada repousando sobre sete folhas, tudo contido em um círculo de bordas verdes. Ao lado, texto em verde onde se lê Vida Verde" 
     class="header-img"
   />
+  
     </div>
       <div class="container">
         <div class="header-content">
