--- a/index.html
+++ b/index.html
@@ -20,57 +20,58 @@
     alt="uma mão humana, de cor branca, desenhada repousando sobre sete folhas, tudo contido em um círculo de bordas verdes. Ao lado, texto em verde onde se lê Vida Verde" 
     class="header-img"
   />
+    <div class="header-image-overlay"></div>
+  </div>
   
-    </div>
-      <div class="container">
-        <div class="header-content">
-          <a href="index.html" class="logo">
-            <i class="fas fa-seedling logo-icon"></i>
-            <span class="logo-text">Vida Verde</span>
-          </a>
+  <div class="container">
+    <div class="header-content">
+      <a href="index.html" class="logo">
+        <i class="fas fa-seedling logo-icon"></i>
+        <span class="logo-text">Vida Verde</span>
+      </a>
 
-          <button class="mobile-menu-btn" aria-label="Abrir menu">
-            <i class="fas fa-bars"></i>
-          </button>
+      <button class="mobile-menu-btn" aria-label="Abrir menu">
+        <i class="fas fa-bars"></i>
+      </button>
 
-          <nav class="nav">
-            <ul class="nav-list">
-              <li><a href="index.html" class="nav-link active">Início</a></li>
-              <li class="dropdown">
-                <a href="projeto.html" class="nav-link dropdown-toggle">
-                  Projetos <i class="fas fa-chevron-down"></i>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="projeto.html#nascentes" class="dropdown-link"
-                      >Nascentes Vivas</a
-                    >
-                  </li>
-                  <li>
-                    <a href="projeto.html#cerrado" class="dropdown-link"
-                      >Cerrado em Pé</a
-                    >
-                  </li>
-                  <li>
-                    <a href="projeto.html#mata-atlantica" class="dropdown-link"
-                      >Mata Atlântica</a
-                    >
-                  </li>
-                </ul>
-              </li>
-              <li><a href="cadastro.html" class="nav-link">Cadastro</a></li>
-              <li><a href="#contato" class="nav-link">Contato</a></li>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li><a href="index.html" class="nav-link active">Início</a></li>
+          <li class="dropdown">
+            <a href="projeto.html" class="nav-link dropdown-toggle">
+              Projetos <i class="fas fa-chevron-down"></i>
+            </a>
+            <ul class="dropdown-menu">
               <li>
-                <a href="projeto.html#doar" class="btn btn-secondary btn-sm"
-                  >Doar</a
+                <a href="projeto.html#nascentes" class="dropdown-link"
+                  >Nascentes Vivas</a
+                >
+              </li>
+              <li>
+                <a href="projeto.html#cerrado" class="dropdown-link"
+                  >Cerrado em Pé</a
+                >
+              </li>
+              <li>
+                <a href="projeto.html#mata-atlantica" class="dropdown-link"
+                  >Mata Atlântica</a
                 >
               </li>
             </ul>
-          </nav>
-        </div>
-      </div>
-      <div class="nav-overlay"></div>
-    </header>
+          </li>
+          <li><a href="cadastro.html" class="nav-link">Cadastro</a></li>
+          <li><a href="#contato" class="nav-link">Contato</a></li>
+          <li>
+            <a href="projeto.html#doar" class="btn btn-secondary btn-sm"
+              >Doar</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+  <div class="nav-overlay"></div>
+</header>
 
     <!-- Hero Section -->
     <section class="hero">
