--- a/index.html
+++ b/index.html
@@ -341,18 +341,25 @@
             <h3>Links Rápidos</h3>
             <ul class="footer-links">
               <li><a href="index.html">Página Inicial</a></li>
-              <li><a href="projeto.html">Projetos Sociais</a></li>
+              <li><a href="projeto.html">Projetos</a></li>
               <li><a href="cadastro.html">Cadastro</a></li>
-              <li><a href="#contato">Contato</a></li>
+              <li><a href="index.html#contato">Contato</a></li>
             </ul>
           </div>
-
           <div class="footer-column">
             <h3>Projetos</h3>
             <ul class="footer-links">
               <li><a href="projeto.html#nascentes">Nascentes Vivas</a></li>
               <li><a href="projeto.html#cerrado">Cerrado em Pé</a></li>
               <li><a href="projeto.html#mata-atlantica">Mata Atlântica</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h3>Transparência</h3>
+            <ul class="footer-links">
+              <li><a href="#">Relatórios Anuais</a></li>
+              <li><a href="#">Prestação de Contas</a></li>
+              <li><a href="#">Certificações</a></li>
             </ul>
           </div>
         </div>
